<resources>
    <string name="app_name">SearchingYoutube</string>
    <string name="검색키워드">keyword</string>
    <string name="평가순">rating</string>
    <string name="제목순">title</string>
    <string name="조회수순">viewcount</string>
    <string name="페이지당">"maxResults  :  "</string>
    <string name="개5">5</string>
    <string name="개10">10</string>
    <string name="개25">25</string>
    <string name="개50">50</string>
    <string name="제외할키워드">Keywords to exclude:</string>
    <string name="기간">Specify the date</string>
    <string name="기간2">"Specify the date  :  "</string>
    <string name="날짜지우기">Clear date</string>
    <string name="오늘">today</string>
    <string name="일주일">1week</string>
    <string name="한달">1month</string>
    <string name="일년">1year</string>
    <string name="검색기록">" Search history  :  "</string>
    <string name="기본검색어보기">기본 검색어 보기</string>
    <string name="검색기록보기">검색기록 보기</string>
    <string name="검색어">"검색어  :  "</string>
    <string name="제외키워드">"제외 키워드  :  "</string>
    <string name="전체삭제">전체 삭제</string>
    <string name="편집">편집</string>
    <string name="수정">수정</string>
    <string name="삭제">삭제</string>
    <string name="취소">취소</string>
    <string name="한가지선택">수정할 검색 기록을 선택해주세요</string>
    <string name="기본검색값으로">" Would you like to set it "</string>
    <string name="설정하시겠습니까">as the default search value?</string>
    <string name="예">Yes</string>
    <string name="아니오">No</string>
    <string name="채널명">채널명</string>
    <string name="게시일자">게시일자</string>
    <string name="제목">제목\n</string>
    <string name="타이틀">유튜브 검색 필터</string>
    <string name="검색하기">" Search"</string>
    <string name="수정하기">수정하기</string>
    <string name="정렬순">"order : "</string>
    <string name="업데이트순">date</string>
    <string name="정확도순">relevance</string>
    <string name="이전">" Previous"</string>
    <string name="다음">Next</string>
    <string name="제외할키워드hint">If there are multiple, separated by (comma)</string>

</resources>
