<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </com.google.android.material.appbar.AppBarLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <LinearLayout
                android:id="@+id/searchLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="invisible">
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@drawable/stroke"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_gravity="center"
                                android:adjustViewBounds="true"
                                android:scaleType="centerInside"
                                android:src="@drawable/search_image" />

                            <EditText
                                android:id="@+id/editText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/검색키워드"
                                android:textSize="15dp"
                                android:imeOptions="actionDone"
                                android:inputType="text"
                                android:layout_weight="1" />
                            <FrameLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <Button
                                    android:id="@+id/btn_search"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="15dp"
                                    android:text="@string/검색하기" />
                                <Button
                                    android:id="@+id/modify_search"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="15dp"
                                    android:visibility="invisible"
                                    android:text="@string/수정하기" />
                            </FrameLayout>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/정렬순"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <Spinner
                                android:id="@+id/spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:layout_marginRight="5dp"/>
                            <EditText
                                android:layout_width="1dp"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/페이지당"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <Spinner
                                android:id="@+id/spinner2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/제외할키워드"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <EditText
                                android:id="@+id/editText_except"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:hint="@string/제외할키워드hint"
                                android:textSize="15dp"
                                android:imeOptions="actionDone"
                                android:inputType="text"
                                android:layout_weight="1"/>
                        </LinearLayout>
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:text="@string/기간"
                                android:gravity="center"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <Button
                                android:id="@+id/resetButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:text="@string/날짜지우기" />
                        </FrameLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/todayText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#88E6E6E6"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/오늘"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <TextView
                                android:id="@+id/weekText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#88E6E6E6"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/일주일"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <TextView
                                android:id="@+id/monthText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#88E6E6E6"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/한달"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <TextView
                                android:id="@+id/yearText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingTop="5dp"
                                android:paddingBottom="5dp"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:background="#88E6E6E6"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/일년"
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:paddingLeft="15dp"
                            android:paddingRight="15dp"
                            android:gravity="center"
                            android:orientation="horizontal">
                            <TextView
                                android:id="@+id/textView_start"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:padding="3dp"
                                android:gravity="center"
                                android:background="@drawable/stroke"
                                android:layout_weight="1"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="  ~  "
                                android:textSize="15dp"
                                android:textColor="#000000"/>
                            <TextView
                                android:id="@+id/textView_end"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:padding="3dp"
                                android:gravity="center"
                                android:background="@drawable/stroke"
                                android:layout_weight="1"/>
                        </LinearLayout>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_margin="5dp"
                            android:background="#E6E6E6"/>
                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                            <FrameLayout
                                android:id="@+id/search_list_fragment"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent" />
                            <FrameLayout
                                android:id="@+id/blackLayout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:visibility="invisible"
                                android:background="#88000000"/>
                        </FrameLayout>
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>